changed math fonts and corrected some minor typos

--- a/my_assignments.tex
+++ b/my_assignments.tex
@@ -1,7 +1,8 @@
 \documentclass[10.5pt]{amsart}
 \usepackage{amsfonts,amssymb,amsmath}
-\usepackage{gfsartemisia}
 \usepackage{xltxtra}
+\usepackage{unicode-math}
+\setmathfont{Asana-Math.otf}
 \usepackage{pstricks-add}
 \usepackage{geometry}
 \geometry{
@@ -34,8 +35,8 @@ $\bullet$ (D) $\dsp \left\{z\in\BBC| |z-1|<|z|\right\}$
 \begin{center}
  \textbf{Solution}
 \end{center}
-In the following figures the \textit{x-axis} is the real axis and the \textit{y-axis} the 
-imaginary one.
+In the following figures the \textit{x-axis} is the \textbf{real} axis and the 
+\textit{y-axis} the \textbf{imaginary} one.
 \begin{center}
 \begin{figure}
 \begin{subfigure}[t]{0.45\linewidth}
@@ -52,7 +53,8 @@ imaginary one.
 \psdots[dotsize=5pt 0,dotstyle=*](3,2)
 \end{scriptsize}
 \end{pspicture*}
-\caption{$|z-3-2\mi|\leq 1$ is the unit (r=1) disc (circle+interior) with center (3,2).}
+\caption{$|z-3-2\mi|\leq 1$ is the \textbf{unit} (r=1) disc (circle+interior) with center 
+(3,2).}
 \end{subfigure} \hfill
 \begin{subfigure}[t]{0.45\linewidth}
 \centering
@@ -95,8 +97,8 @@ y=2.}
 \end{scriptsize}
 \end{pspicture*}
 \caption{It is the colored (light red) region included between the lines 
-    $y= \tan\left(\frac{\pi}{6}\right)$ and y=0 without the point (0,0) and of course without 
-    the points of the lines mentioned above.} 
+    $y= \tan\left(\frac{\pi}{6}\right)$ and y=0 without the point (0,0) and of course 
+\textbf{without} the points of the lines mentioned above.} 
 \end{subfigure}\hfill
 \begin{subfigure}[t]{0.45\linewidth}
 \centering
@@ -159,10 +161,9 @@ or
  \left(-\frac{1}{2},-\frac{\sqrt{3}}{2}\right),\left(\frac{1}{2},-\frac{\sqrt{3}}{2}\right)\right\}
 \]
 An easy way to construct the figure is to take $z_1=1$, draw the point (1,0) and then from that point create a 
-regular hexagon of side 1 centered at the origin of the axis, which of course is also 
-inscribed in the circle 
-of radius 1 and center (0,0). The six solutions are represented by the red points A, B, C, 
-D, E, F which are 
+\textbf{regular} hexagon of side 1 centered at the origin of the axis, which of course is 
+also inscribed in the circle of radius 1 and center (0,0). The six solutions are 
+represented by the  points A, B, C, D, E, F which are 
 the vertices of this regular hexagon, as seen in the following figure.
 \begin{center}
 \newrgbcolor{zzttff}{0.6 0.2 1}
@@ -202,17 +203,22 @@ dotsize=3pt 0,linewidth=0.8pt,arrowsize=3pt 2,arrowinset=0.25}
 \section{Second Assignment}
 \textbf{1.} Find the image of the set $\dsp U = \left\{z\in\mathbb{C} \bigg|  \frac{-\pi}{2}\leq\mathfrak{Re}(z)\leq\frac{\pi}{2}\right\}$ 
 under the function $f(z) = \sin(z)$. To do so please answer the following questions:\\
-a. What is the image of the line segment $\dsp L_{1} = \left(\frac{\pi}{2},\frac{\pi}{2}\right)$ (in the real axis) under f?\\
-b.    What is the image of the imaginary axis $\dsp L_{2}=\left\{\mi y |y \in \mathbb{R}\right\}$ under f?\\
-c.    What is the image of the vertical line $L_{3}=\left\{-\frac{\pi}{2}+\mi y\bigg| y\in\mathbb{R}\right\}$ under f?\\
-d.    What is the image of the vertical line $\dsp L_{4}=\left\{\frac{\pi}{2}+\mi y \bigg| y\in\mathbb{R}\right\}$ under f?\\
-e.    Given your above observations, what do you guess the image of the set U is under f?
+a. What is the image of the line segment $\dsp 
+L_{1}=\left(\frac{\pi}{2},\frac{\pi}{2}\right)$ (in the real axis) under $f$?\\
+b.    What is the image of the imaginary axis $\dsp L_{2}=\left\{\mi y |y \in 
+\mathbb{R}\right\}$ under $f$?\\
+c.    What is the image of the vertical line $L_{3}=\left\{-\frac{\pi}{2}+\mi y\bigg| 
+y\in\mathbb{R}\right\}$ under $f$?\\
+d.    What is the image of the vertical line $\dsp L_{4}=\left\{\frac{\pi}{2}+\mi y \bigg| 
+y\in\mathbb{R}\right\}$ under $f$?\\
+e.    Given your above observations, what do you guess the image of the set $U$ is under 
+$f$?
 \begin{center}
  \textbf{Solution}
 \end{center}
 Before we begin answering the questions we need to do some calculations.
 \[
-f(z) = \sin(z) = \sin(x+y \mi = \sin(x)\cos(y\mi) + \sin(\mi y)\cos(x) = \sin(x)\cosh(y) 
+f(z) = \sin(z) = \sin(x+y \mi) = \sin(x)\cos(y\mi) + \sin(\mi y)\cos(x) = \sin(x)\cosh(y) 
 +\mi\cdot \cos(x)\sinh(y)\]
 so $u(x,y) = \sin(x)\cosh(y)$ and $v(x,y) = \cos(x)\sinh(y)$.\\
 a. $L_{1}$ is the line segment $\dsp \mathfrak{Re}\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$ in the z-plane, so for 
@@ -227,10 +233,13 @@ and since the range of $\sinh$ is $\dsp (-\infty,+\infty)$ for $y\in\mathbb{R}$,
 deduce that f maps the $y\mi$ line or the 
 $\mathfrak{Im}(z)$ axis into the imaginary axis $\mathfrak(Im)(w)$ of the \textit{w-plane}.
 \[\includegraphics[width = 0.6\linewidth]{1b.png}\]
-c. Again for $\dsp x = -\frac{\pi}{2}$ we get $\dsp w\left(-\frac{pi}{2},y\right)=\left<-\cosh(y),0\right>$ and since the range of cosh is 
+c. Again for $\dsp x = -\frac{\pi}{2}$ we get $\dsp 
+w\left(-\frac{\pi}{2},y\right)=\left<-\cosh(y),0\right>$ and since the range of $\cosh$ 
+is 
 $[1,+\infty)$ for $y\in\mathbb{R}$, we deduce that f maps the line $\dsp y = -\frac{\pi}{2} + y \mi$ of the \textit{z-plane} into the line 
 $\dsp \mathfrak{Re}(-\infty,-1]$ of the \textit{w-plane}, we can imagine that an invisible hand bends the two infinite branches of the 
-line $\dsp y = -\frac{\pi}{2}+y\mi$ regarding as the center of the infinite verical line the point $\dsp \left(-\frac{\pi}{2},0\right)$ 
+line $\dsp y = -\frac{\pi}{2}+y\mi$ regarding as the center of the infinite vertical line 
+the point $\dsp \left(-\frac{\pi}{2},0\right)$ 
 leftwards, until both branched become one with the real axis and then the same force moves the new line's edge horizontally to 
 the point (-1,0). We will see the same process in the next question but in the opposite direction.
 \[\includegraphics[width = 0.6\linewidth]{1c.png}\]
@@ -241,15 +250,19 @@ e. It is clear that $\dsp U = \left\{ z \in \BBC\bigg|-\frac{\pi}{2}<\mathfrak{R
 \textit{w-plane} slit along the rays $\mathfrak{Re}(-\infty,1]$ and $\mathfrak{Re}[1,+\infty)$ (white lines in the next figure excluding
 also from the w-plane the points (-1,0) and (1,0)).
 \[\includegraphics[width = 0.6\linewidth]{1e.png}\]
-\textbf{2.} Let $u(x,y) = x^2 - y^2 -y$. Find a real-valued function $v(x,y)$ such that $v(0,0)=1$ and together, u and v satisfy the 
+\textbf{2.} Let $u(x,y) = x^2 - y^2 -y$. Find a real-valued function $v(x,y)$ such that 
+$v(0,0)=1$ and together, $u$ and $v$ satisfy the 
 \textit{Cauchy-Riemann} equations in the entire complex plane.\\\\
 To do so, please follow these steps:\\
 a.    Find the partial derivatives $u_x(x,y)$ and $u_y(x,y)$.\\
 b.    Using these partial derivatives and the Cauchy-Riemann equations, give equations for the partial derivatives $v_x(x,y)$ and 
 $v_y(x,y)$.\\
-d.    Find functions v(x,y) that satisfy the equation for the partial derivative with respect to y.\\
-e.    Now find a function v(x,y) that satisfies both equations for the partial derivatives at the same time.\\
-f.     Finally, check whether the function you found in the previous step satisfies v(0,0)=1. If not, modify the function so that it does.\\
+d.    Find functions $v(x,y)$ that satisfy the equation for the partial derivative with 
+respect to $y$.\\
+e.    Now find a function $v(x,y)$ that satisfies both equations for the partial 
+derivatives at the same time.\\
+f.     Finally, check whether the function you found in the previous step satisfies 
+$v(0,0)=1$. If not, modify the function so that it does.\\
 \begin{center}
 \textbf{Solution}
 \end{center}
@@ -258,38 +271,45 @@ a. $u_{x}(x,y) =2x $ and $u_{y}(x,y) =  -2y - 1$.\\
 b. $\dsp \left\{\begin{matrix}u_{x} &=&v_{y} \\ u_{y} &=&-v_{x}\end{matrix}\right.\Rightarrow \left\{\begin{matrix}2x &=&v_{y} \\ -
 2y-1 &=&-v_{x}\end{matrix}\right.\Rightarrow \left\{\begin{matrix}v_{y} &=&2x \\ v_{x}&=&2y+1\end{matrix}\right.\Rightarrow 
 \left\{\begin{matrix} v_{x}&=&2y+1\\v_{y} &=&2x \end{matrix}\right.$\\
-c. From the previous answer we came up with the equation and by integrating with respect to x and treating y as a 
+c. From the previous answer we came up with the equation and by integrating with respect 
+to $x$ and treating $y$ as a 
 \textit{\textbf{constant}} we get,\[v_{x}(x,y)=2y+1\Rightarrow \int v_{x}(x,y)\;\mathbb{d}x = \int 2y +1 \;\mathbb{d}x\Rightarrow v(x,y) =
 2xy+x+ay+c \;\;(1)\]
 for $a,c\in\mathbb{R}$.\\
-d. Following the same process as in (c), but now by integrating with respect to y and treating x as a \textit{\textbf{constant}} 
+d. Following the same process as in (c), but now by integrating with respect to $y$ and 
+treating $x$ as a \textit{\textbf{constant}} 
 we get \[v_{y}(x,y)=2x \Rightarrow \int v_{y}(x,y)\;\mathbb{d}y = \int 2x \;\mathbb{d}y \Rightarrow v(x,y) = 2xy + bx + d\;\;(2)\]
 for $b,d \in \mathbb{R}$.\\
 e. Equating relations (1) and (2) from answers c and d respectively we get \begin{eqnarray*}2xy+x+ay+c&=&2xy + bx + d\\ (1-b)x+ay+c-d
 &=&0\end{eqnarray*}
-so a=0, b=1 and c=d and $\dsp \boxed{v(x,y)=2xy+x+c}\;\;(3)$.\\
+so $a=0$, $b=1$ and $c=d$ and $\dsp \boxed{v(x,y)=2xy+x+c}\;\;(3)$.\\
 f. From (3) $\dsp v(0,0) = c \Leftrightarrow c = 1 $ for the function $v$ is $v(x,y) = 
 2xy+x+1$.
 \section{Third Assignment}
 \textbf{1.} Sketch the image under the map $f(z)=\textrm{Log}(z)$ of the open half annulus $\dsp A=\left\{z\in\BBC\bigg| 
 \mathfrak{e}^{-\frac{\pi}{4}}<|z|<\mathfrak{e}^{\frac{\pi}{4}},\mathfrak{Re}(z)>0\right\}$.\\\\
-Recall: $\textrm{Log}(z)$ denotes the principal branch of logarithm, that is, $\textrm{Log}(z)=\ln⁡|z|+\mi \textrm{Arg}(z)$, 
-where $\dsp -\pi<\textrm{Arg}(z)\leq \pi$ is the principal argument of z.\\
+Recall: $\textrm{Log}(z)$ denotes the \textit{principal branch} of logarithm, that is, 
+$\textrm{Log}(z)=\ln⁡|z|+\mi \textrm{Arg}(z)$, 
+where $\dsp -\pi<\textrm{Arg}(z)\leq \pi$ is the principal argument of $z$.\\
 The image you create (either by hand or using a computer graphing program) should contain two graphs: On one set of 
-coordinate axes, sketch the half annulus A, on a second set of axes sketch its image under f. Please highlight the following 
+coordinate axes, sketch the half annulus $A$, on a second set of axes sketch its image 
+under $f$ . Please highlight the following 
 parts of your graph:\\
 1. The set $\dsp \left\{z\in\BBC\bigg||z| =\mathfrak{e}^{-\frac{\pi}{4}}, \mathfrak{Re}(z)>0\right\}$ (this is a part of the boundary
-of A) as well as the image of this boundary portion under f in your second graph.\\
+of A) as well as the image of this boundary portion under $f$ in your second graph.\\
 2. The set $\dsp \left\{z\in\BBC\bigg||z| = \mathfrak{e}^{\frac{\pi}{4}},\mathfrak{Re}(z)>0\right\}$ (this is another part of the 
-boundary of A) as well as the image of this boundary portion under f in your second graph (use a different color for these sets 
+boundary of $A$) as well as the image of this boundary portion under $f$ in your second 
+graph (use a different color for these sets 
 than you used in the first part if possible).\\
 3. The set $\left\{z \in \BBC \bigg|\mathfrak{e}^{-\frac{\pi}{4}}\leq\mathfrak{Im}(z)\leq\mathfrak{e}^{\frac{\pi}{4}},\mathfrak{Re}(z)=0
-\right\}$ (this is yet another part of the boundary of A) as well as the image of this boundary portion under f in your second 
+\right\}$ (this is yet another part of the boundary of $A$) as well as the image of this 
+boundary portion under $f$ in your second 
 graph (use a third color if possible).\\
 4. The set $\dsp \left\{z \in \BBC\bigg|-\mathfrak{e}^{\frac{\pi}{4}}\leq \mathfrak{Im}(z)\leq-\mathfrak{e}^{-\frac{\pi}{4}},
-\mathfrak{Re}(z) = 0\right\}$ (this is the fourth part of the boundary of A) as well as the image of this boundary portion under 
-f in your second graph (use a fourth color if possible).\\
-5. The set A (on your first graph) and its image f(A) (on your second graph).
+\mathfrak{Re}(z) = 0\right\}$ (this is the fourth part of the boundary of $A$) as well 
+as the image of this boundary portion under 
+$f$ in your second graph (use a fourth color if possible).\\
+5. The set $A$ (on your first graph) and its image $f(A)$ (on your second graph).
 \begin{center}
 \textbf{Solution}
 \end{center}
@@ -315,7 +335,8 @@ points as seen in the next figure.
 \mathfrak{Re}(z)=0\right\}$ is the vertical line segment which lies in the imaginary axis of the z-plane with ending points (included)
 $\dsp z=\mathfrak{e}^{-\frac{\pi}{4}}\mi$ and $z=\mathfrak{e}^{\frac{\pi}{4}}\mi$. In this case $\dsp\textrm{Arg}(z)=\frac{\pi}{2}$ and 
 $\dsp\mathfrak{Re}(z)=0$, so \[\textrm{Log}(z)=\ln|y\cdot \mi|+\frac{\pi}{2}\mi=\ln⁡(y)+\mi\frac{\pi}{2}\] which means that that the 
-closed line segment $C_3$ is mapped under f into the closed horizontal line line segment $\dsp t+\mi\frac{\pi}{2}$ with 
+closed line segment $C_3$ is mapped under $f$ into the closed horizontal line line 
+segment $\dsp t+\mi\frac{\pi}{2}$ with 
 $t\in\left[-\frac{\pi}{4},\frac{\pi}{2}\right]$. In the next figure we see the orange closed vertical line segment $C_3$ mapped into the 
 orange closed horizontal line segment of the \textit{w-plane}.
 \begin{center}\includegraphics{2c.png}\end{center}
@@ -396,7 +417,8 @@ $\dsp C_3: \sin⁡(x+y\mi)=\sin⁡(x)\cosh⁡(y)+\mi\cos⁡(x)\sinh⁡(y)$, so
 $\dsp C_4: \max_{z\in C_{4}}\left|\sin(z)\right|=\max_{t\in\left[0,1\right]}\left|\sin(t\cdot \mi )\right|=\max_{t\in\left[0,1\right]}\left|\mi\cdot \sinh(t )\right|=\sinh(1)$, attained at $\dsp z=\mi$.
 
 So summing up the above we get $\color{red}{\max_{z\in \overline{D}}\left|f(z)\right|=\left|f\left(\frac{\pi}{2}+\mi\right)
-\right|=\cosh(1)}$, which means that the maximum modulus of f is $\dsp\cosh(1)$  attained at $\dsp z = \frac{\pi}{2}+\mi$.
+\right|=\cosh(1)}$, which means that the maximum modulus of $f$ is $\dsp\cosh(1)$  
+attained at $\dsp z = \frac{\pi}{2}+\mi$.
 
 
 $\dagger$ Recall that $\dsp\sinh⁡(z) =\frac{\mathfrak{e}^{z}-\mathfrak{e}^{-z}}{2}$ and $\dsp \cosh(z)=\frac{\mathfrak{e}^{z} + 
