--- a/my_assignments.tex
+++ b/my_assignments.tex
@@ -17,8 +17,7 @@
 \usepackage{graphicx}\usepackage{sidecap}\usepackage{bbm}
 \title{\textbf{Assignments Of Complex Analysis}\\\textit{instructor Petra 
 Bonfert-Taylor}}
-\author{George Papadopoulos\\ pgeorgios8@gmail.com}
-\date{11/4/2017}
+\author{George Papadopoulos\\ pgeorgios8@gmail.com\\12th April 2017}
 \newcommand{\dsp}{\displaystyle}
 \newcommand{\BBC}{\mathbb{C}}\newcommand{\mi}{\mathfrak{i}}
 \setlength\parindent{0pt}\usepackage{color,colortbl}
