--- a/my_assignments.tex
+++ b/my_assignments.tex
@@ -294,7 +294,7 @@ f. From (3) $\dsp v(0,0) = c \Leftrightarrow c = 1 $ for the function $v$ is $v(
 2xy+x+1$.
 \section{Third Assignment}
 \textbf{1.} Sketch the image under the map $f(z)=\textrm{Log}(z)$ of the open half annulus 
-$\dsp A=\left\{z\in\BBC\left| 
+$\dsp A=\left\{z\in\BBC\;\left| \;
 \mathfrak{e}^{-\frac{\pi}{4}}<|z|<\mathfrak{e}^{\frac{\pi}{4}},\mathfrak{Re}
 (z)>0\right.\right\} $.\\Recall: $\textrm{Log}(z)$ denotes the \textit{principal branch} 
 of logarithm, that is, $\textrm{Log}(z)=\ln⁡|z|+\mi \textrm{Arg}(z)$, 
