changed first wording

--- a/my_assignments.tex
+++ b/my_assignments.tex
@@ -27,10 +27,12 @@ Bonfert-Taylor}}
 \maketitle\[\includegraphics[scale = 0.25]{wesleyan.png}\]
 \section{First Assignment}
 \textbf{1.} Graph the following four sets:\\
-(A) $\dsp \left\{z\in\BBC\;\left|\; |z-3-2\mi|\leq 1\right.\right\}$\\
-(B) $\dsp \left\{z\in\BBC\;\left|\; \mathfrak{Im}(z) = 2\right.\right\}$\\
-(C) $\dsp\left\{z\in\BBC\setminus\{0\}\;\left|\;0<\arg{z}<\frac{\pi}{6}\right.\right\}$\\
-(D) $\dsp \left\{z\in\BBC\;\left|\; |z-1|<|z|\right.\right\}$
+\begin{tabular}{l l}
+A. & $\dsp \left\{z\in\BBC\;\left|\; |z-3-2\mi|\leq 1\right.\right\}$\\
+B. & $\dsp \left\{z\in\BBC\;\left|\; \mathfrak{Im}(z) = 2\right.\right\}$\\
+C. & $\dsp\left\{z\in\BBC\setminus\{0\}\;\left|\;0<\arg{z}<\frac{\pi}{6}\right.\right\}$\\
+D. & $\dsp \left\{z\in\BBC\;\left|\; |z-1|<|z|\right.\right\}$\\
+\end{tabular}
 \begin{center}
 \textbf{Solution}
 \end{center}
