--- a/my_assignments.tex
+++ b/my_assignments.tex
@@ -89,7 +89,7 @@ y=2.}
 \psline[linewidth=1.6pt,linestyle=dashed,dash=2pt 2pt,linecolor=fftttt](8.4,4.86)(6,0)
 \begin{scriptsize}
 \psdots[dotsize=5pt 0](0,0)
-\rput[bl](-0.46,0.32){$A$}
+%\rput[bl](-0.46,0.32){$A$}
 \rput[bl](0.78,0.14){\ccqqcc{$30\textrm{\degre}$}}
 \psdots[dotstyle=*,linecolor=xdxdff](6,0)
 \rput[bl](6.08,0.12){\xdxdff{$C$}}
@@ -207,7 +207,9 @@ a. What is the image of the line segment $\dsp
 L_{1}=\left(\frac{\pi}{2},\frac{\pi}{2}\right)$ (in the real axis) under $f$?\\
 b.    What is the image of the imaginary axis $\dsp L_{2}=\left\{\mi y\; \left|\;y \in 
 \mathbb{R}\right.\right\}$ under $f$?\\
-c.    What is the image of the vertical line $L_{3}=\left\{-\frac{\pi}{2}+\mi y\;\left| \;
+c.    What is the image of the vertical line $\dsp L_{3}=\left\{-\frac{\pi}{2}+\mi 
+y\;\left| 
+\;
 y\in\mathbb{R}\right.\right\}$ under $f$?\\
 d.    What is the image of the vertical line $\dsp L_{4}=\left\{\frac{\pi}{2}+\mi y 
 \left| \;y\in\mathbb{R}\right.\right\}$ under $f$?\\
