--- a/my_assignments.tex
+++ b/my_assignments.tex
@@ -1,5 +1,4 @@
 \documentclass[11pt]{amsart}
-\usepackage{amsfonts,amssymb,amsmath}
 \usepackage{xltxtra}
 \usepackage{unicode-math}
 \setmathfont{Asana-Math.otf}
@@ -30,7 +29,7 @@ Bonfert-Taylor}}
 \begin{tabular}{l l}
 A. & $\dsp \left\{z\in\BBC\;\left|\; |z-3-2\mi|\leq 1\right.\right\}$\\
 B. & $\dsp \left\{z\in\BBC\;\left|\; \mathfrak{Im}(z) = 2\right.\right\}$\\
-C. & $\dsp\left\{z\in\BBC\setminus\{0\}\;\left|\;0<\arg{z}<\frac{\pi}{6}\right.\right\}$\\
+C. & $\dsp\left\{z\in\BBC\setminus\{0\}\;\left|\;0<\arg(z)<\frac{\pi}{6}\right.\right\}$\\
 D. & $\dsp \left\{z\in\BBC\;\left|\; |z-1|<|z|\right.\right\}$\\
 \end{tabular}
 \begin{center}
@@ -143,7 +142,7 @@ a graph showing your answer as well as the calculation that led you to this grap
 \textbf{Solution}
 \end{center}
 $\dsp z^6=1\Rightarrow |z|^{6}\mathfrak{e}^{6\mi\theta}=1^{6}\mathfrak{e}^{0\cdot\mi}\Rightarrow 
-\begin{cases}|z|=1&\\6\theta=2k\pi\Rightarrow 
+\begin{cases}\dsp |z|=1&\\\dsp 6\theta=2k\pi\Rightarrow 
 \theta=\frac{k\pi}{3}&,k=0,1,2,3,4,5\end{cases}$, so the points we seek are
 \[
 \left\{(1,0),\left(\cos\left(\frac{\pi}{3}\right),\sin\left(\frac{\pi}{3}\right)\right),
@@ -185,7 +184,7 @@ dotsize=3pt 0,linewidth=0.8pt,arrowsize=3pt 2,arrowinset=0.25}
 \psdots[dotsize=5pt 0,dotstyle=*](0,0)
 \rput[bl](0.03,0.06){$O$}
 \psdots[dotsize=5pt 0,dotstyle=*](-1,0)
-\rput[bl](-1.11,-0.09){$D$}
+\rput[bl](-1.11,-0.12){$D$}
 \psdots[dotsize=5pt 0,dotstyle=*](-0.5,-0.87)
 \rput[bl](-0.57,-1){$E$}
 \psdots[dotsize=5pt 0,dotstyle=*](0.5,-0.87)
@@ -201,22 +200,21 @@ dotsize=3pt 0,linewidth=0.8pt,arrowsize=3pt 2,arrowinset=0.25}
 \end{center}
 \section{Second Assignment}
 \textbf{1.} Find the image of the set $\dsp U = \left\{z\in\mathbb{C}\;
-\left|\;\frac{-\pi}{2}\leq\mathfrak{Re}(z)\leq\frac{\pi}{2}\right.\right\}$ 
-under the function $f(z) = \sin(z)$. To do so please answer the following questions:\\
-a. What is the image of the line segment $\dsp 
-L_{1}=\left(\frac{\pi}{2},\frac{\pi}{2}\right)$ (in the real axis) under $f$?\\
-b.    What is the image of the imaginary axis $\dsp L_{2}=\left\{\mi y\; \left|\;y \in 
+\left|\;-\frac{\pi}{2}\leq\mathfrak{Re}(z)\leq\frac{\pi}{2}\right.\right\}$ 
+under the function $f(z) = \sin(z)$. To do so please answer the following 
+questions:\\\begin{tabular}{ll}
+a.&What is the image of the line segment $\dsp 
+L_{1}=\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$ (in the real axis) under $f$?\\
+b.&What is the image of the imaginary axis $\dsp L_{2}=\left\{\mi y\; \left|\;y \in 
 \mathbb{R}\right.\right\}$ under $f$?\\
-c.    What is the image of the vertical line $\dsp L_{3}=\left\{-\frac{\pi}{2}+\mi 
-y\;\left| 
-\;
-y\in\mathbb{R}\right.\right\}$ under $f$?\\
-d.    What is the image of the vertical line $\dsp L_{4}=\left\{\frac{\pi}{2}+\mi y 
-\left| \;y\in\mathbb{R}\right.\right\}$ under $f$?\\
-e.    Given your above observations, what do you guess the image of the set $U$ is under 
-$f$?
+c.& What is the image of the vertical line $\dsp L_{3}=\left\{-\frac{\pi}{2}+\mi 
+y\;\left|\;y\in\mathbb{R}\right.\right\}$ under $f$?\\
+d.& What is the image of the vertical line $\dsp L_{4}=\left\{\frac{\pi}{2}+\mi y\left| 
+\;y\in\mathbb{R}\right.\right\}$ under $f$?\\
+e.&Given your above observations, what do you guess the image of the set $U$ is 
+under $f$?\end{tabular}
 \begin{center}
- \textbf{Solution}
+\textbf{Solution}
 \end{center}
 Before we begin answering the questions we need to do some calculations.
 \[
@@ -225,10 +223,12 @@ f(z) = \sin(z) = \sin(x+y \mi) = \sin(x)\cos(y\mi) + \sin(\mi y)\cos(x) = \sin(x
 so $u(x,y) = \sin(x)\cosh(y)$ and $v(x,y) = \cos(x)\sinh(y)$.\\
 a. $L_{1}$ is the line segment $\dsp 
 \mathfrak{Re}\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$ in the \textit{z-plane}, so for 
-$\dsp x\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$ and $y=0$ we get $\dsp 
-w(x,0)=\left<u(x,0),v(x,0)\right>=\left<\sin(x),0\right>$ 
-and for $\dsp x = \pm\frac{\pi}{2}$, $\dsp w\left(\pm\frac{\pi}{2},0\right) = \pm 1$, $f$
-which means that under , $L_{1}$ is mapped
+$\dsp x\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$ and $y=0$ we get 
+\[ 
+w(x,0)=\left<u(x,0),v(x,0)\right>=\left<\sin(x),0\right>
+\]
+and for $\dsp x = \pm\frac{\pi}{2}$, $\dsp w\left(\pm\frac{\pi}{2},0\right) = \pm 1$, 
+which means that under $f$, $L_{1}$ is mapped
 into the line segment $\dsp \mathfrak{Re}(-1,1)$ in the \textit{w-plane}.
 \[\includegraphics[width = 0.6\linewidth]{1a.png}\]
 b. Following the same steps as in answer (a) we get,\[
@@ -236,13 +236,12 @@ w(0,y) = \left<u(0,y),v(0,y)\right> = \left<0,\sinh(y)\right>
 \]
 and since the range of $\sinh$ is $\dsp (-\infty,+\infty)$ for $y\in\mathbb{R}$, we 
 deduce that $f$ maps the $y\mi$ line or the 
-$\mathfrak{Im}(z)$ axis into the \textit{imaginary} axis $\mathfrak(Im)(w)$ of the 
+$\mathfrak{Im}(z)$ axis into the \textit{imaginary} axis $\mathfrak{Im}(w)$ of the 
 \textit{w-plane}.
 \[\includegraphics[width = 0.6\linewidth]{1b.png}\]
 c. For $\dsp x = -\frac{\pi}{2}$ we get $\dsp 
 w\left(-\frac{\pi}{2},y\right)=\left<-\cosh(y),0\right>$ and since the range of $\cosh$ 
-is 
-$[1,+\infty)$ for $y\in\mathbb{R}$, we deduce that $f$ maps the line $\dsp y = 
+is $[1,+\infty)$ for $y\in\mathbb{R}$, we deduce that $f$ maps the line $\dsp y = 
 -\frac{\pi}{2} + y \mi$ of the \textit{z-plane} into the line 
 $\dsp \mathfrak{Re}(-\infty,-1]$ of the \textit{w-plane}, we can imagine that an invisible hand bends the two infinite branches of the 
 line $\dsp y = -\frac{\pi}{2}+y\mi$ regarding as the center of the infinite vertical line 
@@ -264,32 +263,39 @@ also from the \textit{w-plane} the points (-1,0) and (1,0)).
 \textbf{2.} Let $u(x,y) = x^2 - y^2 -y$. Find a real-valued function $v(x,y)$ such that 
 $v(0,0)=1$ and together, $u$ and $v$ satisfy the 
 \textit{Cauchy-Riemann} equations in the entire complex plane.\\\\
-To do so, please follow these steps:\\
-a.    Find the partial derivatives $u_x(x,y)$ and $u_y(x,y)$.\\
-b.    Using these partial derivatives and the Cauchy-Riemann equations, give equations for the partial derivatives $v_x(x,y)$ and 
-$v_y(x,y)$.\\
-d.    Find functions $v(x,y)$ that satisfy the equation for the partial derivative with 
+To do so, please follow these steps:\\\begin{tabular}{ll}
+a.&Find the partial derivatives $u_x(x,y)$ and $u_y(x,y)$.\\
+b.&Using these partial derivatives and the Cauchy-Riemann equations, give equations 
+for the partial derivatives $v_x(x,y)$ and $v_y(x,$\\
+ &$y)$.\\
+c.&Find functions $v(x,y)$ that satisfy the equation for the partial derivative 
+with respect to $x$.\\
+d.&Find functions $v(x,y)$ that satisfy the equation for the partial derivative with 
 respect to $y$.\\
-e.    Now find a function $v(x,y)$ that satisfies both equations for the partial 
+e.&Now find a function $v(x,y)$ that satisfies both equations for the partial 
 derivatives at the same time.\\
-f.     Finally, check whether the function you found in the previous step satisfies 
-$v(0,0)=1$. If not, modify the function so that it does.\\
+f.&Finally, check whether the function you found in the previous step satisfies 
+$v(0,0)=1$.\\
+&If not, modify the function so that it does.\end{tabular}\\
 \begin{center}
 \textbf{Solution}
 \end{center}
 $\dsp u(x,y) = x^2 - y^2 -y$\\
 a. $u_{x}(x,y) =2x $ and $u_{y}(x,y) =  -2y - 1$.\\
-b. $\dsp \left\{\begin{matrix}u_{x} &=&v_{y} \\ u_{y} &=&-v_{x}\end{matrix}\right.\Rightarrow \left\{\begin{matrix}2x &=&v_{y} \\ -
-2y-1 &=&-v_{x}\end{matrix}\right.\Rightarrow \left\{\begin{matrix}v_{y} &=&2x \\ v_{x}&=&2y+1\end{matrix}\right.\Rightarrow 
-\left\{\begin{matrix} v_{x}&=&2y+1\\v_{y} &=&2x \end{matrix}\right.$\\
+b. $\dsp \left\{\begin{array}{lcl}u_{x} &=&v_{y} \\ u_{y} 
+&=&-v_{x}\end{array}\right.\Rightarrow \left\{\begin{array}{rcr}2x &=&v_{y} \\ -
+2y-1 &=&-v_{x}\end{array}\right.\Rightarrow \left\{\begin{array}{lcl}v_{y} &=&2x \\ 
+v_{x}&=&2y+1\end{array}\right.\Rightarrow 
+\left\{\begin{array}{lcl} v_{x}&=&2y+1\\v_{y} &=&2x \end{array}\right.$\\
 c. From the previous answer we came up with the equation and by integrating with respect 
 to $x$ and treating $y$ as a 
-\textit{\textbf{constant}} we get,\[v_{x}(x,y)=2y+1\Rightarrow \int v_{x}(x,y)\;\mathbb{d}x = \int 2y +1 \;\mathbb{d}x\Rightarrow v(x,y) =
-2xy+x+ay+c \;\;(1)\]
-for $a,c\in\mathbb{R}$.\\
+\textit{\textbf{constant}} we get \begin{equation}v_{x}(x,y)=2y+1\Rightarrow \int 
+v_{x}(x,y)\;\mathbb{d}x = \int 2y +1 \;\mathbb{d}x\Rightarrow v(x,y) =
+2xy+x+ay+c\end{equation} for $a,c\in\mathbb{R}$.\\
 d. Following the same process as in (c), but now by integrating with respect to $y$ and 
 treating $x$ as a \textit{\textbf{constant}} 
-we get \[v_{y}(x,y)=2x \Rightarrow \int v_{y}(x,y)\;\mathbb{d}y = \int 2x \;\mathbb{d}y \Rightarrow v(x,y) = 2xy + bx + d\;\;(2)\]
+we get \begin{eqnarray}v_{y}(x,y)=2x \Rightarrow \int v_{y}(x,y)\;\mathbb{d}y = \int 2x 
+\;\mathbb{d}y \Rightarrow v(x,y) = 2xy + bx + d\end{eqnarray}
 for $b,d \in \mathbb{R}$.\\
 e. Equating relations (1) and (2) from answers c and d respectively we get \begin{eqnarray*}2xy+x+ay+c&=&2xy + bx + d\\ (1-b)x+ay+c-d
 &=&0\end{eqnarray*}
@@ -298,111 +304,113 @@ f. From (3) $\dsp v(0,0) = c \Leftrightarrow c = 1 $ for the function $v$ is $v(
 2xy+x+1$.
 \section{Third Assignment}
 \textbf{1.} Sketch the image under the map $f(z)=\textrm{Log}(z)$ of the open half annulus 
-$\dsp A=\left\{z\in\BBC\;\left| \;
-\mathfrak{e}^{-\frac{\pi}{4}}<|z|<\mathfrak{e}^{\frac{\pi}{4}},\mathfrak{Re}
+$\dsp A=\left\{z\in\BBC\;\left| 
+\;\mathfrak{e}^{-\frac{\pi}{4}}<|z|<\mathfrak{e}^{\frac{\pi}{4}},\mathfrak{Re}
 (z)>0\right.\right\} $.\\Recall: $\textrm{Log}(z)$ denotes the \textit{principal branch} 
-of logarithm, that is, $\textrm{Log}(z)=\ln⁡|z|+\mi \textrm{Arg}(z)$, 
+of logarithm, that is, $\textrm{Log}(z)=\log|z|+\mi\textrm{Arg}(z)$, 
 where $\dsp -\pi<\textrm{Arg}(z)\leq \pi$ is the principal argument of $z$.\\
 The image you create (either by hand or using a computer graphing program) should contain two graphs: On one set of 
 coordinate axes, sketch the half annulus $A$, on a second set of axes sketch its image 
 under $f$ . Please highlight the following 
 parts of your graph:\\
-1. The set $\dsp \left\{z\in\BBC\;\left|\;|z| =\mathfrak{e}^{-\frac{\pi}{4}}, 
+a. The set $\dsp \left\{z\in\BBC\;\left|\;|z| =\mathfrak{e}^{-\frac{\pi}{4}}, 
 \mathfrak{Re}(z)>0\right.\right\}$ (this is a part of the boundary
 of A) as well as the image of this boundary portion under $f$ in your second graph.\\
-2. The set $\dsp \left\{z\in\BBC\;\left|\;|z| 
+b. The set $\dsp \left\{z\in\BBC\;\left|\;|z| 
 =\mathfrak{e}^{\frac{\pi}{4}},\mathfrak{Re}(z)>0\right.\right\}$ (this is another part of 
 the 
 boundary of $A$) as well as the image of this boundary portion under $f$ in your second 
 graph (use a different color for these sets 
 than you used in the first part if possible).\\
-3. The set $\left\{z \in 
+c. The set $\left\{z \in 
 \BBC\;\left|\;\mathfrak{e}^{-\frac{\pi}{4}}\leq\mathfrak{Im}(z)\leq\mathfrak{e}^{\frac{\pi
 } { 4 } }, \mathfrak{Re}(z)=0\right.\right\}$ (this is yet another part of the boundary 
 of $A$) as well as the image of this 
 boundary portion under $f$ in your second 
 graph (use a third color if possible).\\
-4. The set $\dsp \left\{z \in \BBC\;\left|\;-\mathfrak{e}^{\frac{\pi}{4}}\leq 
+d. The set $\dsp \left\{z \in \BBC\;\left|\;-\mathfrak{e}^{\frac{\pi}{4}}\leq 
 \mathfrak{Im}(z)\leq-\mathfrak{e}^{-\frac{\pi}{4}},
 \mathfrak{Re}(z) = 0\right.\right\}$ (this is the fourth part of the boundary of $A$) as 
 well 
 as the image of this boundary portion under 
 $f$ in your second graph (use a fourth color if possible).\\
-5. The set $A$ (on your first graph) and its image $f(A)$ (on your second graph).
+e. The set $A$ (on your first graph) and its image $f(A)$ (on your second graph).
 \begin{center}
 \textbf{Solution}
 \end{center}
-First of all before we begin with the step by step solution we should always have in our mind that $\dsp\textrm{Log}(z)=\ln|z|+\mi 
-\textrm{Arg}(z), for -\pi<\textrm{Arg}(z)\leq \pi$.\\
-1. We are given the semicircle $\dsp 
+First of all before we begin with the step by step solution we should always have in our 
+mind that: \[\textrm{Log}(z)=\log|z|+\mi\textrm{Arg}(z),\text{ 
+for }-\pi<\textrm{Arg}(z)\leq \pi\]
+a. We are given the semicircle $\dsp 
 C_{1}=\left\{z\in\BBC\;\left|\;|z|=\mathfrak{e}^{-\frac{\pi}{4}},\mathfrak{Re}
 (z)>0\right.\right\}$ and we 
 will find its image under $\dsp f(z)=\textrm{Log}(z)$. So for every $z\in C_{1}$we have 
-$\dsp \textrm{Arg}(z)\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$ and $\text{Log}(z)=\ln(e)-\frac{\pi}{2}+\mi\textrm{Arg}(z)$ so f maps $C_1$ 
-into the vertical line $z=-\frac{\pi}{4}+\mi\textrm{Arg}(z)$  of the \textit{w-plane} as seen in the next figure (red semicircle without 
-the ending points).
+$\dsp \textrm{Arg}(z)\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$ and 
+\[\text{Log}(z)=\log(\mathfrak{e}^{-\frac{\pi}{4}})+\mi\textrm{Arg}(z) = 
+-\frac{\pi}{4}+\mi\textrm{Arg}(z)\] so  $f$ maps $C_1$ into the vertical line $\dsp 
+z=-\frac{\pi}{4}+\mi\textrm{Arg}(z)$ of the \textit{w-plane} as seen in the next 
+figure (red semicircle without the ending points) with 
+$\dsp\text{Arg}(z)\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$.
 \begin{center}
 \includegraphics{2a.png}
 \end{center}
-2. We are given the semicircle $\dsp 
+b. We are given the semicircle $\dsp 
 C_{2}=\left\{z\in\BBC\;\left|\;|z|=\mathfrak{e}^{\frac{\pi}{4}},\mathfrak{Re}
 (z)>0\right.\right\}$ and 
-following the same steps as in (1) we get \[\textrm{Log}(z)=\ln\left(\mathfrak{e}^{\frac{\pi}{4}}\right)+\mi\textrm{Arg}(z)=
-\frac{\pi}{4}+\mi\textrm{Arg}(z)\] with $\textrm{Arg}(z)\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$. So the blue semicircle $C_2$ without its 
+following the same steps as in (1) we get 
+\[\textrm{Log}(z)=\log\left(\mathfrak{e}^{\frac{\pi}{4}}\right)+\mi\textrm{Arg}(z)=
+\frac{\pi}{4}+\mi\textrm{Arg}(z)\] with 
+$\dsp\textrm{Arg}(z)\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$. So the blue semicircle 
+$C_2$ without its 
 ending points is mapped into the vertical blue line $\dsp z=\frac{\pi}{4}+\mi\textrm{Arg}(z)$ of the \textit{w-plane} without its ending 
 points as seen in the next figure.
 \begin{center}
 \includegraphics{2b.png}
 \end{center}
-3. The set $\dsp
+c. The set $\dsp
 C_3=\left\{z\in\BBC\;\left|\;\mathfrak{e}^{-\frac{\pi}{4}}\leq\mathfrak{Im}
-(z)\leq\mathfrak { e } ^ {\frac{\pi}{4}}, \
-\mathfrak{Re}(z)=0\right.\right\}$ is the vertical line segment which lies in the 
+(z)\leq\mathfrak { e } ^ {\frac{\pi}{4}}, \mathfrak{Re}(z)=0\right.\right\}$ is the 
+vertical line segment which lies in the 
 imaginary axis of the \textit{z-plane} with ending points (included)
 $\dsp z=\mathfrak{e}^{-\frac{\pi}{4}}\mi$ and $z=\mathfrak{e}^{\frac{\pi}{4}}\mi$. In this case $\dsp\textrm{Arg}(z)=\frac{\pi}{2}$ and 
-$\dsp\mathfrak{Re}(z)=0$, so \[\textrm{Log}(z)=\ln|y\cdot \mi|+\frac{\pi}{2}\mi=\ln⁡(y)+\mi\frac{\pi}{2}\] which means that that the 
-closed line segment $C_3$ is mapped under $f$ into the closed horizontal line line 
-segment $\dsp t+\mi\frac{\pi}{2}$ with 
-$t\in\left[-\frac{\pi}{4},\frac{\pi}{2}\right]$. In the next figure we see the orange closed vertical line segment $C_3$ mapped into the 
+$\dsp\mathfrak{Re}(z)=0$, so 
+\[\textrm{Log}(z)=\log|y\cdot\mi|+\mi\text{Arg}(z)=\log|y|+\mi\frac{\pi}{2}\]
+which means that that the \textbf{closed} line segment $C_3$ is mapped under $f$ into the 
+\textbf{closed} horizontal line line segment $\dsp t+\mi\frac{\pi}{2}$ with 
+$\dsp t\in\left[-\frac{\pi}{4},\frac{\pi}{4}\right]$. In the next figure we see the 
+orange closed vertical line segment $C_3$ mapped into the 
 orange closed horizontal line segment of the \textit{w-plane}.
 \begin{center}\includegraphics{2c.png}\end{center}
-4.  The set 
-$C_4=\left\{z\in\BBC\;\left|\;-\mathfrak{e}^{\frac{\pi}{4}}\leq\mathfrak{Im}
+d.  The set $C_4=\left\{z\in\BBC\;\left|\;-\mathfrak{e}^{\frac{\pi}{4}}\leq\mathfrak{Im}
 (z)\leq-\mathfrak { e }^{-\frac{\pi}{4}}, \mathfrak{Re}(z)=0
 \right.\right\}$ is the vertical line segment which lies in the imaginary axis of the 
 \textit{z-plane} with ending points (included) 
 $\dsp z=-\mathfrak{e}^{-\frac{\pi}{4}}\mi$ and $\dsp z=-\mathfrak{e}^{\frac{\pi}{4}}\mi$. In this case $\dsp\textrm{Arg}(z)=-\frac{\pi}{2}$ 
-and $\dsp\mathfrak{Re}(z)=0$, so \[\textrm{Log}(z)=\ln|y\cdot \mi|−\frac{\pi}{2}\mi=\ln⁡(y)−\mi\frac{\pi}{2}\]
-which means that that the closed line segment $C_4$ is mapped under $f$ into the closed 
-horizontal line line segment 
-$\dsp t−\mi\frac{\pi}{2}$ with $t\in\left[-\frac{\pi}{4},\frac{\pi}{4}\right]$. In the next figure we see the green closed vertical line 
+and $\dsp\mathfrak{Re}(z)=0$, so \[\textrm{Log}(z)=\log|y\cdot 
+\mi|−\mi\text{Arg}(z)=\log|y|−\mi\frac{\pi}{2}\]
+which means that that the \textbf{closed} line segment $C_4$ is mapped under $f$ into the 
+\textbf{closed} horizontal line line segment 
+$\dsp t−\mi\frac{\pi}{2}$ with $\dsp t\in\left[-\frac{\pi}{4},\frac{\pi}{4}\right]$. In 
+the next figure we see the green closed vertical line 
 segment $C_4$ mapped into the green closed horizontal line segment of the \textit{w-plane}.
 \begin{center}\includegraphics{2d.png}\end{center}
-5. $\dsp A=\left\{z\in\BBC\left|\mathfrak{e}^{-\frac{\pi}{4}}<|z|<\mathfrak{e}^{\frac{\pi}{4}\mi},\mathfrak{Re}(z)>0\right.\right\}$ 
-under $f$ is shown in the next figure.
-\begin{center}\includegraphics{2e.png}\end{center}
-
-\definecolor{tcA}{rgb}{1,1,1}
-\definecolor{tcB}{rgb}{1,0,0}
-\definecolor{tcC}{rgb}{0,0,0}
-\begin{center}
-\begin{tabular}{l|l}
-% use packages: color,colortbl
-\rowcolor{tcA}
-\textcolor{tcB}{- - - - - - - - - - - - -} & boundary not included\\
-\rowcolor{tcA}
-\textcolor{tcC}{O} & point not included
-\end{tabular}
-\end{center}
+e. $\dsp 
+A=\left\{z\in\BBC\left|\mathfrak{e}^{-\frac{\pi}{4}}<|z|<\mathfrak{e}^{\frac{\pi}{4} \mi}, 
+\mathfrak{Re}(z)>0\right.\right\}$ under $f$ is shown in the next figure.
+\begin{center}\includegraphics{2e.png}
+Region Mapping under $f$.\\\begin{tabular}{l|r}\textbf{O}&point not 
+included\\{\color{red}- - -}&boundary not included\end{tabular}\end{center}
 \textbf{2.} Let $f(z)=\sin(⁡z)$ and consider the domain $\dsp D=\left\{z\in\BBC\;\left| \;
 0<\mathfrak{Re}(z)<\pi, 0<\mathfrak{Im}(z)<1\right.\right\}$ 
 (an open rectangle). Find the maximum of $\dsp\left|f(z)\right|$ on $\dsp\overline{D}=D\bigcup\partial D$ as well as the z-value(s) at 
 which $\dsp |f|$ attains this maximum value.
 \begin{center}
- \textbf{Solution}
+\textbf{Solution}
 \end{center}
-We want to find the maximum of $\dsp |f|$ over the rectangle $\dsp\overline{D}=D\bigcup\partial D$. From the maximum modulus 
-principle the $\dsp \max_{z\in \overline{D}}\left|f(z)\right|$ is attained on the boundary $\partial D$. In next figure it is clear that 
+We want to find the maximum of $\dsp |f|$ over the rectangle 
+$\dsp\overline{D}=D\bigcup\partial D$. From the \textbf{maximum modulus 
+principle} the $\dsp \max_{z\in \overline{D}}\left|f(z)\right|$ is attained on the 
+boundary $\partial D$. In next figure it is clear that 
 we must seek for the maximum of $\dsp\left|f\right|$ on the lines $\dsp C_1, C_2, C_3, C_4$.
 \begin{center}
 \newrgbcolor{ffttff}{1 0.2 1}
@@ -433,26 +441,35 @@ we must seek for the maximum of $\dsp\left|f\right|$ on the lines $\dsp C_1, C_2
 \end{scriptsize}
 \end{pspicture*}
 \end{center}
-
 Now will examine what happens on each line separately.\\
-$\dsp C_1: \max_{z\in C_1}\sin⁡(z)=\max_{t\in [0,\pi]}\left|\sin⁡(t)\right|=\sin\left(\frac{\pi}{2}\right)=1$, attained at $\dsp z=\frac{\pi}{2}$.
+$\dsp C_{1}:\max_{z\in 
+C_{1}}\left|\sin(z)\right|=\max_{t\in[0,\pi]}\left|\sin(t)\right|=\sin\left(\frac{\pi}{2}
+\right)=1$ , attained at $\dsp z=\frac{\pi}{2}$.
 
-$\dsp C_2: \max_{z\in C_2}\sin⁡(z)=\max_{t\in [0,1]}\sin⁡(\pi+t\mi)=\max_{t\in[0,1]}-\mi\sinh⁡(t)=\max_{t\in[0,1]}\sinh⁡(t)=\sinh⁡(1)$, 
-attained at $z=\pi+\mi$.
+$\dsp C_{2}:\max_{z\in 
+C_{2}}\left|\sin(z)\right|=\max_{t\in[0,1]}\left|\sin(\pi+t\mi)\right|=\max_{t\in[0,1]}
+\left|-\mi\sinh(t)\right|=\max_{t\in[0,1]}\left|\sinh(t)\right|=\sinh(1)$, attained at 
+$\dsp z=\pi+\mi$.
 
-$\dsp C_3: \sin⁡(x+y\mi)=\sin⁡(x)\cosh⁡(y)+\mi\cos⁡(x)\sinh⁡(y)$, so 
-\begin{eqnarray*} \max_{z\in C_3}\sin⁡(z) &=&\max_{t\in [0,\pi]}\sin⁡(t)\cosh⁡(1)+\mi\cos⁡(t)\sinh⁡(1)\\ 
- &=&\max_{t\in[0,\pi]}\sqrt{\left(\sin⁡(t)\cosh⁡(1)\right)^{2}+\left(\cos⁡(t)\sinh⁡(1)\right)}^{2}\\
-&=&\cosh(1)\end{eqnarray*} , attained at $\dsp z=\frac{\pi}{2}+\mi$.
+$\dsp C_{3}:$ Recall that $\dsp\sin(z)=\sin(x+y\mi)=\sin(x)\cosh(y)+\mi\cos(x)\sinh(y)$.
+\begin{eqnarray*}
+\max_{z\in 
+C_{3}}\left|\sin(z)\right|&=&\max_{t\in[0,\pi]}
+\left|\sin(t)\cosh(1)+\mi\cos(t)\sinh(1)\right|\\
+&=&\max_{t\in[0,\pi]}\sqrt{\sin(t)^{2}\cosh(1)^{2}+\cos(t)^{2}\sinh(1)^{2}}\\
+&=&\sqrt{\cosh(1)^{2}}\;\;\;\;\text{attained at 
+}t=\frac{\pi}{2}\\
+&=&\cosh(1)\;\;\ddag
+\end{eqnarray*}
+so the maximum value of the modulus 
+of $f$ on $C_{3}$ is $\dsp\cosh(1)$ and it is attained at $\dsp z = \frac{\pi}{2}+\mi$.
 
 $\dsp C_4: \max_{z\in C_{4}}\left|\sin(z)\right|=\max_{t\in\left[0,1\right]}\left|\sin(t\cdot \mi )\right|=\max_{t\in\left[0,1\right]}\left|\mi\cdot \sinh(t )\right|=\sinh(1)$, attained at $\dsp z=\mi$.
 
-So summing up the above we get $\dsp\max_{z\in 
-\overline{D}}\left|f(z)\right|=\left|f\left(\frac{\pi}{2}+\mi\right)
-\right|=\cosh(1)$, which means that the \textbf{maximum} modulus of $f$ is 
-$\dsp\cosh(1)$ attained at $\dsp z = \frac{\pi}{2}+\mi$.
+So summing up the above we conclude that the \textbf{maximum} modulus of $f$ is 
+$\dsp\cosh(1)$ attained at $\dsp z =\frac{\pi}{2}+\mi$.
 
-
-$\dagger$ Recall that $\dsp\sinh⁡(z) =\frac{\mathfrak{e}^{z}-\mathfrak{e}^{-z}}{2}$ and $\dsp \cosh(z)=\frac{\mathfrak{e}^{z} + 
-\mathfrak{e}^{-z}}{2}$.
+$\color{red}\rule{\textwidth}{1pt}$\\\\
+$\ddag$ Recall that $\dsp\sinh⁡(z)=\frac{\mathfrak{e}^{z}-\mathfrak{e}^{-z}}{2}$ and 
+$\dsp \cosh(z)=\frac{\mathfrak{e}^{z} + \mathfrak{e}^{-z}}{2}$.
 \end{document}
