--- a/my_assignments.tex
+++ b/my_assignments.tex
@@ -470,6 +470,6 @@ So summing up the above we conclude that the \textbf{maximum} modulus of $f$ is
 $\dsp\cosh(1)$ attained at $\dsp z =\frac{\pi}{2}+\mi$.
 
 $\color{red}\rule{\textwidth}{1pt}$\\\\
-$\ddag$ Recall that $\dsp\sinh⁡(z)=\frac{\mathfrak{e}^{z}-\mathfrak{e}^{-z}}{2}$ and 
-$\dsp \cosh(z)=\frac{\mathfrak{e}^{z} + \mathfrak{e}^{-z}}{2}$.
+$\ddag$ Recall that $\dsp\sinh(z)=\frac{\mathfrak{e}^{z}-\mathfrak{e}^{-z}}{2}$ and 
+$\dsp\cosh(z)=\frac{\mathfrak{e}^{z} + \mathfrak{e}^{-z}}{2}$.
 \end{document}
